2000-07-04  Karl Fogel  <kfogel@red-bean.com>

	* server.c (pserver_authenticate_connection): use new
	getline_safe() during authentication phase, to avoid a
	denial-of-service attack in which client sends arbitrary 
	amounts of data with no newlines.
	(Reported by <jpmg@eng.cam.ac.uk>.)

	* sanity.sh: new test pserver-14 for above.
	
	* myndbm.c: #include getline.h.
	(mydbm_load_file): pass new GETLINE_NO_LIMIT flag to getstr().

2000-07-03  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules): Rewrite using dotest.  Add "modules-"
	prefix to test names.

2000-06-28  Larry Jones  <larry.jones@sdrc.com>

	* error.c (error_exit): Call rcs_cleanup () to release any rcs locks.
	* rcs.c, rcs.h (rcs_cleanup): Make public, close file before trying
	to remove (some systems won't remove open files).
	(RCS_putdtree): Don't worry about cleaning up before call error
	since it now does it for us.
	(rcs_internal_lockfile, rcs_internal_unlockfile): Keep track of
	lock file fd for rcs_cleanup ().

	* client.c (handle_set_checkin_prog, handle_set_update_prog):
	Just ignore the request when exporting.

2000-06-27  Larry Jones  <larry.jones@sdrc.com>

	* create_adm.c, cvs.h (Create_Admin): Add dotemplate argument.
	Change all callers.
	* checkout.c (checkout_proc): Don't create CVS/Template if
	exporting.

2000-06-26  Pavel Roskin <proski@gnu.org>
	and Larry Jones  <larry.jones@sdrc.com>

	* server.c (switch_to_user): Only set CVS_Username if
	AUTH_SERVER_SUPPORT is defined.

2000-06-23  Larry Jones  <larry.jones@sdrc.com>

	* client.c (send_dirent_proc): Don't allocate ignlist if you're
	going to skip the directory (plugs memory leak).
	(send_dirleave_proc): New function.
	(send_files): Use it (plugs memory leak).
	* root.c (root_allow_free): Plug memory leaks.
	* server.c (serve_directory, serve_notify, check_password,
	pserver_authenticate_connection): Ditto.
	* update.c (update): Ditto.

	This completes the memory leak shoot-out -- the Purify'ed version